--- a/0.1.9
+++ b/0.1.9
@@ -1,14 +1,31 @@
 2017-11-1  问题如下
 
 1)所选物体前后移动，飞机无动作 
-受单目摄像头的硬件局限，无人机本身无法准确分辨出远近，只能靠人脸识别等辅助技术在追踪人脸的应用环境下起到补充的作用，且在之前的测试中无人机在进行前后移动的时候会有明显的抬头和低头动作会导致画面呈现内容瞬间出现很大变化从而影响整体视频的效果，因此我们去掉了根据人脸识别确定距离的功能。 
-针对这个问题我们的解决方案是建议使用无人机自带的微调功能，在起飞之前自动校准，空中飞行稳定后再开启追踪。在贵公司的测试应用中我们没有发现这一功能，不知道在官 的正式版app中是否会提供这个功能呢? 
+受单目摄像头的硬件局限，无人机本身无法准确分辨出远近，只能靠人脸识别等辅助技术在追踪人脸的应用环境下起到补充的作用，
+且在之前的测试中无人机在进行前后移动的时候会有明显的抬头和低头动作会导致画面呈现内容瞬间出现很大变化从而影响整体视频的效果，
+因此我们去掉了根据人脸识别确定距离的功能。 
+针对这个问题我们的解决方案是建议使用无人机自带的微调功能，在起飞之前自动校准，空中飞行稳定后再开启追踪。
+在贵公司的测试应用中我们没有发现这一功能，不知道在官方的正式版app中是否会提供这个功能呢?
 
-2)概率性出现，退出跟踪后，虚拟摇杆很难控制 机的现象 
-测试数小时未能复现该问题，在追踪的过程中虚拟摇杆被完全覆盖了，而退出跟踪后应该是立刻可以恢复摇杆的! 理论上正式的app中此处摇杆逻辑应该是以人工控制覆盖自动控制为宜，即任何时候 控制应该优先尊重，然虚拟摇杆部分的控制在本身 程文件中藏的较深，接口不易获得，所以我们的工程师在此测试应用中跟踪产生的控制指令覆盖了人工控制指令。综上，问题可通过获得虚拟摇杆控制逻辑来实现，如此问题已经严重影 响飞行测试，我们希望拿到一个布尔变量用以监测用户是否在x1MenuView这个layer上有 Touch操作来完成我们这块的逻辑。 
+B回复:(补充) 目前第三方SDK，并未提供摄像头动态微调接口，并且摄像头方向调节在现有产品上也是手动调节。
+我司此款产品不带自动微调功能。
+
+2)概率性出现，退出跟踪后，虚拟摇杆很难控制飞机的现象 
+测试数小时未能复现该问题，在追踪的过程中虚拟摇杆被完全覆盖了，而退出跟踪后应该是立刻可以恢复摇杆的! 
+理论上正式的app中此处摇杆逻辑应该是以人工控制覆盖自动控制为宜，即任何时候 控制应该优先尊重，
+然虚拟摇杆部分的控制在本身 程文件中藏的较深，接口不易获得，
+所以我们的工程师在此测试应用中跟踪产生的控制指令覆盖了人工控制指令。
+综上，问题可通过获得虚拟摇杆控制逻辑来实现，如此问题已经严重影 响飞行测试，
+我们希望拿到一个布尔变量用以监测用户是否在x1MenuView这个layer上有 Touch操作来完成我们这块的逻辑。 
+
 
 3) 飞机在移动过程中，移动物体正常步态移动，所选对象容易跟丢的现象，移动速度要很慢，飞机跟丢的概率会减小 
-由于我们这里室内空间比较狭小 ，所以我们调整参数比较保守，整体无人机移动相对缓慢同时看上去启动反应迟缓，新版本已经放大初始反应速度和最大速度，取而代之可能出现的问题是少量的过冲，请保持3米以上的距离测试，不要太近，我们已经调整到一个适合自拍距离的比较好的值。请测试! 
+由于我们这里室内空间比较狭小 ，所以我们调整参数比较保守，整体无人机移动相对缓慢同时看上去启动反应迟缓，
+新版本已经放大初始反应速度和最大速度，取而代之可能出现的问题是少量的过冲，请保持3米以上的距离测试，
+不要太近，我们已经调整到一个适合自拍距离的比较好的值。请测试! 
+
+B回复:(补充)我们的产品定位室内穿越机，一般的房屋也会存在小于3M的间距，所以硬性要求的大于3M好像存在困难；
+刚才测试发现，修改后的0.2.1版本放大反应速度和最大速度，跟丢的概率加大了
 
 4)所选物体跟丢的情况下，飞机没有尝试寻找目标，而是直接替代自选对象 
 本追踪模型采用的是动态训练目标，为减少搜索比对的计算压力，相邻两帧追踪只会在目标的临域内寻找最接近的目标匹配，因为飞机可以支持在转向等运动后继续追踪而不是只能追踪静态对象。
@@ -16,5 +33,13 @@
 第一种是初始化钼标回到初始位置，如果动态目标没有训练太久，那么初始目标和现在的模型相似程度还是会很高，所以很大概率会自动找回原始目标。
 第二种是重启追踪并重新选择初始目标。
 
+B回复:(补充)测试几次，发现选中盒子，人体面部头像（背景带玻璃，背景为白色墙体），训练的效果不甚理想，请贵公司正对此问题，看能不能有更好的处理办法。
+选中目标匹配度不高，如果让用户重新反复重新设置追踪目标，在app端的体验太差了。
+
+
 5)退出跟踪模式的情况下，有时候跟踪选定框不消失 
-此问题成功复现，经过检验纯粹是UI问题，逻辑运行正常，如再次发生，只管继续测试， 开启算法重新框选就可以。我们的 程师说这部分逻辑目前用的是ViewLayer的操作做的，不是最 想的模式，最好是能够拿到虚拟摇杆的启动开关以彻底解决这个逻辑问题。
+此问题成功复现，经过检验纯粹是UI问题，逻辑运行正常，如再次发生，只管继续测试， 开启算法重新框选就可以。
+我们的工程师说这部分逻辑目前用的是ViewLayer的操作做的，不是最理想的模式，最好是能够拿到虚拟摇杆的启动开关以彻底解决这个逻辑问题。
+
+B回复:(补充)在测试代码里有你需要的信息，主要在DataBase文件中，搜索getVirtualData方法和参阅VirtualControl类就可以调整飞行控制参数
+至于摇杆，在测试工程WingslandX1FlyTouchView文件中可以找到相应办法，设置虚拟摇杆相关信息
