--- a/0.1.9
+++ b/0.1.9
@@ -24,7 +24,7 @@ B回复:(补充) 目前第三方SDK，并未提供摄像头动态微调接口，
 新版本已经放大初始反应速度和最大速度，取而代之可能出现的问题是少量的过冲，请保持3米以上的距离测试，
 不要太近，我们已经调整到一个适合自拍距离的比较好的值。请测试! 
 
-B回复:(补充)我们的产品定位室内穿越机，一般的房屋也会存在小于3M的间距，所以硬性要求的大于3M好像存在困难；
+B回复:(补充)我们的产品定位室内穿越机，一般的房屋也会存在小于左右3M范围的间距，所以硬性要求的大于3M好像存在困难；
 刚才测试发现，修改后的0.2.1版本放大反应速度和最大速度，跟丢的概率加大了
 
 4)所选物体跟丢的情况下，飞机没有尝试寻找目标，而是直接替代自选对象 
