--- a/0.2.1
+++ b/0.2.1
@@ -1,6 +1,18 @@
 室内测试
 1）使用测试demo发现，飞机会自动上升，用我们公司的app控制同一台飞机，无此现象
 
+Yang Hu:
+尝试复现此现象，如果自动上升指的是开始起飞的时候，那两款app都会有这个现象，
+解决方法为让下拉左侧虚拟操纵杆，即可使之悬停。如果是在追踪时不断上升，我需要得到视频（手机录屏）分析，我们这里没有这个现象。
+
 2）使用点选功能，自动选框范围并不是很好控制，有时候会选到其他目标，而且选框大小不定（存在有时候很大的情况）
 
+Yang Hu:
+这个问题我们了解了，目前已有员工正在做这个优化。如果对点触不满可暂时用画框，只要画的稍微准确一些就可以。
+关于点触部分有任何建设性建议欢迎提出，诸如应该放大缩小或者什么形状为宜，我们这里有任何进展也会更新。
+
 3）飞机跟踪目标，目标静止不动的情况下，会向静止对象无限贴近，不能根据分物体是静止还是运动情况去调整
+
+Yang Hu:
+尝试复现此现象成功，我们发送的前后指令是以1520为中心（即发送指令1520是前后不移动）的，现在看来好像1520不是中心点？
+目前已经关闭此指令，因此此现象已经解决，请更新版本0.2.2（1）。
