--- a/0.2.2
+++ b/0.2.2
@@ -1,5 +1,5 @@
 测试情况说明
-1）根据领导建议，是否可以在目标跟踪丢失的情况，否本地悬停处理，不要替换其他目标
+1）根据领导建议，是否可以在目标跟踪丢失的情况，飞机本地悬停处理，不要替换其他目标
 
 2）用户在空中选取跟踪目标，并且按照之前建议的方式绘制选框，有点儿困难
 
