--- a/0.2.2
+++ b/0.2.2
@@ -1,6 +1,20 @@
 测试情况说明
 1）根据领导建议，是否可以在目标跟踪丢失的情况，飞机本地悬停处理，不要替换其他目标
 
+Yang Hu:
+目前的目标训练是动态的，好处是无人机不会计较你是正脸还是侧脸，会改变追踪目标和模型，然则缺点之一就是算法本身并不知道自己追踪的是什么，
+因此没有替换目标这一说，只有人知道追踪错了，而飞机并不知道。您所说的问题我们会仔细考虑，这是一个很好的建议，
+我们可能做一些提高相邻帧之间相似性的检测看看能否做到让无人机对识别目标有一定的认识。
+
 2）用户在空中选取跟踪目标，并且按照之前建议的方式绘制选框，有点儿困难
 
+Yang Hu:
+已在考虑比较好的目标捕捉的方法，按照你们的说法框选困难而点击容易，但是框选更精确点击生成的框更容易出现错误。
+因此我想更好的方式可能是点击能够自动捕捉出框选能框出的范围，这点我已经和我们这里工程师讨论过，目前有几个可能的方案正在研究。
+在有更新之前，请以框选为主要选择方式。
+
 3）跟踪目标，还是存在丢失目标的情况，体验有点儿差
+
+Yang Hu：
+这是计算机视觉算法共有的特点，大疆纯依赖计算机视觉的的Active Tracking功能在Phantom 4这么好的机载硬件上本地即时运行也有一定的丢失率。
+如还有人和辅助硬件（GPS，双目摄像头，蓝牙Beacon）的信息可以辅助减少丢失率。如果贵公司无人机有以上硬件信息接口，可以在之后的正式整合中加上作为辅助之用。
